--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@biomejs/biome": "1.9.4",
     "typescript": "~5.8.3",
     "vite": "npm:rolldown-vite@7.1.12"
   },
